# abasku

./: .env  .gitignore  Cargo.toml  destinations.txt  flake.nix  index.html  output.css  pnpm-lock.yaml
.github/workflows/: gh-pages-deploy.yml
data/: matrix.json
examples/: matrix.rs
public/: manifest.json
public/screenshots/: narrow.afphoto~lock~  wide.afphoto~lock~
src/: destinations.rs  lib.rs  main.rs
src/components/: mod.rs
src/pages/: checkpoint.rs  food.rs  home.rs  mod.rs
style/: output.css
